--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -68,12 +68,11 @@ Contiene información sobre la Solicitud especifica de un servicio extra que la 
 
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
 | ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
-| Nombre_recobro     | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del recobro                            |
+| Nombre_recobro     | VARCHAR(20)    | x(20)       | No nulo                    | N/A        | N/A             | Nombre del recobro                            |
 | Descripcion_recobro| VARCHAR(50)    | x(50)       | No nulo                    | N/A        | N/A             | Detalles del recobro a realizar               |
-| ID_recobro         | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el recobro            |
-| idinquilino        | CHAR(10)       | x(10)       | No nulo                    | N/A        | N/A             | Identificador único del inquilino             |
+| id_recobro         | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el recobro            |
 | Razon_recobro      | VARCHAR(30)    | x(30)       | no nulo                    | N/A        | N/A             | Motivo por el cual se realiza el recobro      |
-| Categoria_recobro  | VARCHAR(100)   | x(100)      | no nulo                    | N/A        | N/A             | Clasificacion en la cual entra el recobro     |
+| Categoria_recobro  | VARCHAR(20)    | x(20)       | no nulo                    | N/A        | N/A             | Clasificacion en la cual entra el recobro     |
 | Estado_recobro     | VARCHAR(20)    | x(20)       | Enviado, Valorizando, Pendiente, Ejecutado, Completado| N/A        | N/A             | Estado en la que se encuentra el recobro      |
  
 ## Entidad Proyecto de recobro 
@@ -82,10 +81,7 @@ Planificacion sobre la ejecucion de un recobro
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                   |
 | ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | ------------------------------------------------------------------------- |
 | Nombre_proyecto    | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Nombre del proyecto                                                       |
-| ID_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
-| Periodos           | VARCHAR(4)     | x(4)        | No nulo                    | dias       | N/A             | Tiempos  para realizar las tareas encargadas para completar el proyecto   |
-| Actividades        | VARCHAR(20)    | x(20)       | No nulo                    | N/A        | N/A             | Deberes a realizar necesarios para el proyecto                            |
-| Cronograma         | CHAR(10)       | x(10)       | no nulo,                   | N/A        | N/A             | codigo para identificar el cronograma                                     |
+| id_proyecto        | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el proyecto                                       |
 | Costos             | Decimal(5,2)   | x99999.99   | no nulo                    | Sol        | N/A             | Costos asociados sobre la ejecucion del proyecto                          |
 | Estado_proyecto    | VARCHAR(15)    | x(15)       | Ejecutado, Supervision     | N/A        | N/A             | Estado en el que se encuentra el proyecto                                 |
 
@@ -94,12 +90,20 @@ Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa pa
 
 | **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
 | ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
-| Nombre_acuerdo      | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | nombre del acuerdo                                         |
-| ID_acuerdo          | VARCHAR(30)    | x(30)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el acuerdo del recobro             |
+| ID_acuerdo          | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el acuerdo del recobro             |
 | Fecha_acuerdo       | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | dias       | N/A             | Fecha en la que se realiza el acuerdo                      |
-| idinquilino         | CHAR(10)       | x(10)       | No nulo                    | N/A        | N/A             | Identificador único del inquilino                          |
 | Precio_acuerdo      | Decimal(5,2)   | x99999.99   | No nulo                    | Sol        | N/A             | Cantidad de dinero a cobrar por la ejecucion del proyecto  |
 | Descripcion_acuerdo | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | Detalles sobre el acuerdo                                  |
+
+  ## Entidad Actividades
+Actividad realizada durante la ejecucion del proyecto
+
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
+| ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
+| cod_actividad       | CHAR(30)       | x(10)       | no nulo, único             | N/A        | N/A             | Codigo para identificar a la actividad                     |
+| descripcion         | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Descripcion de la actividad                                |
+| Fecha_inicio        | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que inicia la actividad                        |
+| Fecha_fin           | CHAR(10)       | x(10)       | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza la actividad                      |
 
 
   ## Entidad Programación Mantenimientos
