--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -234,7 +234,7 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 | Fecha_Pago   | DATE           | dd/mm/aaaa  | No nulo                | N/A        | N/A             | Fecha en la que se realizó el pago.     |
 | Monto_Pago   | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0           | Moneda     | N/A             | Monto pagado en esta transacción.       |
 | Método_Pago  | CHAR(20)       | x(20)       | "Manual", "Automático" | N/A        | N/A             | Método utilizado para realizar el pago. |
-
+| tipoMoneda     | CHAR(3)         | x(3)          | "USD", "EUR", "PEN", etc.| N/A        | N/A             | Moneda en la que se realizó el pago.    |
 ---
 
 ## **Entidad Empleado**  
