--- a/6/6.md
+++ b/6/6.md
@@ -1,6 +1,7 @@
 <h3>Navegación:<br>
 
-[🔙](../5/5.md) 5. Modelo Conceptual | [📜](../README.md) ÍNDICE 
+[🔙](../5/5.md) 5. Modelo Conceptual | [📜](../README.md) ÍNDICE | [👉🏼](../7/7.md) 7. Creación de Tablas y Poblamiento de Datos
+
 # 6. Modelo Relacional
 En este capítulo, se expone el Modelo Relacional derivado del modelo conceptual. Se presenta cómo las entidades y relaciones del diagrama ER se traducen en tablas y relaciones entre ellas en una base de datos relacional. Se incluyen las reglas de normalización aplicadas para garantizar que la base de datos sea eficiente y esté libre de redundancias.
 
