--- a/7/7.md
+++ b/7/7.md
@@ -1,3 +1,9 @@
+<h3>Navegación:<br>
+
+[🔙](../6/6.md) 6. Modelo Relacional | [📜](../README.md) ÍNDICE
 # 7. Creación de Tablas y Poblamiento de Datos
 
-Sample content for section 7.
+## CONTENIDO
+- 7.1. [Creación de Tablas](7.1/7.1.md)
+- 7.2. [Poblamiento Inicial de Datos](7.2/7.2.md)
+- 7.3. [Carga Masiva de Datos](7.3/7.3.md)
