--- a/6/6.1/6.1.md
+++ b/6/6.1/6.1.md
@@ -1,3 +1,6 @@
 # 6.1. Esquema Relacional (Gráfico)
 
-Sample content for section 6.1.
+Este esquema representa el modelo relacional del sistema de Gestión de Espacios de MallPlaza.
+
+
+![modelo](Esquema_Relacional.jpg)
