--- a/0/0.2_Joel/0.2.md
+++ b/0/0.2_Joel/0.2.md
@@ -29,7 +29,8 @@
   Yo me orienta a realizar una linea de carrera dirigido a la ciberseguridad y creación de sistemas de seguridad informática. Mi objetivo es llegar a ser un arquitecto de seguridad y tener una empresa que brinde servicios de seguridad de la información hacia las demás empresas.
 
 
-  VIDEOS:
-* Practica N1:
-  
-https://youtu.be/mmeTt32NI9s
+## VIDEOS
+|N° PRACTICA| Enlace del video |
+|-----------|-------------------|
+|Practica N1| https://youtu.be/mmeTt32NI9s|
+|Practica N2| https://youtu.be/EVKJp-dsIkw|
