modelo conceptual actualizado

--- a/5/5.1/5.1.md
+++ b/5/5.1/5.1.md
@@ -2,4 +2,4 @@
 
 Modelo Conceptual Entidad Relación del Sistema de Gestión de Arrendamientos y Espacio para MallPlaza
 
-![Modelo Conceptual](ModeloConceptual-EntidadRelacion.png)
+![Modelo Conceptual](modelo_conceptual.png)
