--- a/0/0.5_Piero/0.5.md
+++ b/0/0.5_Piero/0.5.md
@@ -28,8 +28,11 @@
 - ¿Cómo me veo en 10 años?
   Me veo como una profesional con experiencia  en analisis de datos y con ganas de iniciar un emprendimiento.
 
-    VIDEOS:
+    VIDEOS INDIVIDUALES-PIERO CAMPOS:
 * Practica 1:
   
 https://www.youtube.com/watch?v=GFpKeq9AyE8
 
+* Practica 2:
+
+https://youtu.be/L76y1xbuloI
