--- a/0/0.7_Luis/0.7.md
+++ b/0/0.7_Luis/0.7.md
@@ -24,3 +24,7 @@ VIDEOS:
 * Practica N1:
   
 https://www.youtube.com/watch?v=aFd-9lCwkyY&t=347s
+
+* Practica 2:
+
+https://www.youtube.com/watch?v=MAzT_j5Gz6w
