--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -55,12 +55,12 @@ Contiene información clave sobre el acuerdo de arrendamiento, con atributos par
 
 | **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
 | ---------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
-| idContrato       | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Identificador único del contrato.             |
+| id_contrato       | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Identificador único del contrato.             |
 | monto            | DECIMAL(10,2)  | 9999999.99  | No nulo                    | N/A        | N/A             | Monto acordado en el contrato.                |
-| fechaInicio      | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de inicio del contrato.                 |
-| fechaVencimiento | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de vencimiento del contrato.            |
-| estado           | VARCHAR(20)    | x(20)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
-| condición        | VARCHAR(100)   | x(100)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
+| fecha_inicio      | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de inicio del contrato.                 |
+| fecha_vencimiento | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de vencimiento del contrato.            |
+| estado           | VARCHAR(10)    | x(10)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
+| condición        | VARCHAR(256)   | x(256)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
 | porcentaje       | DECIMAL (2,2)  | 99.99       | No nulo                    | N/A        | N/A             | Porcentaje de las ventas que serviran para calular el monto final de la renta.  |
 
 ## Entidad Recobro
@@ -170,9 +170,9 @@ Representa los modulos y tiendas que se encuentran en Mall Plaza.
 | ------------------ | -------------- | ----------- | ------------------- | ---------------- | --------------- | ------------------------------------- |
 | idEspacioComercial | CHAR (10)      | x(10)       | No nulo, único      | N/A              | N/A             | Código único asignado a cada espacio comercial.       |
 | tipo de inmueble   | VARCHAR (10)      | x(10)       | TAB1                | N/A                   | N/A             | Clasificación del inmueble.                           |
-| area               | DECIMAL(10,2)  | 9999999.99  | >0                  | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.               |
+| area               | DECIMAL(6,2)  | 999999.99  | >0                  | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.               |
 | estado             | VARCHAR (10)      | x(10)       | TAB2                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
-| tarifa             | DECIMAL (10,2) | 9999999.99  | >0               | N/A                   | N/A             | Indica el precio por metro cuadrado que se debera pagar por el alquiler del espacio comercial. |
+| tarifa             | DECIMAL (6,2) | 999999.99  | >0               | N/A                   | N/A             | Indica el precio por metro cuadrado que se debera pagar por el alquiler del espacio comercial. |
 
 TAB1
 
@@ -194,7 +194,7 @@ Entidad que representa las distintas áreas o secciones ubicadas dentro de un ce
 
 |**Atributo** |**Naturaleza**| **Formato**  | **Valores Válidos**    | **Unidad** | **Derivada de** | **Descripción**                          |
 | ----------- | ------------ | ------------ | ---------------------- | ---------- | --------------- | ------------------------------------------------ |
-| nombre_zona | VARCHAR(100)    | x(100)      | No nulo, único          | N/A        | N/A             | Nombre de la zona que identifica su ubicación. |
+| nombre_zona | VARCHAR(25)    | x(25)      | No nulo, único          | N/A        | N/A             | Nombre de la zona que identifica su ubicación. |
 | piso        | INT          | 9           | 1-9, No nulo            | N/A        | N/A             | Número del piso donde se encuentra la zona.     |
 | referencia  | VARCHAR(256)    | x(256)      | No nulo                 | N/A        | N/A             | Descripción o referencia adicional de la zona.   |
 
