--- a/0/0.1_Jairo/0.1.md
+++ b/0/0.1_Jairo/0.1.md
@@ -31,9 +31,16 @@
 - ¿Cómo me veo en 10 años?
   Me veo contruyendo y dirigiendo mi propia empresa tecnológica la cual pude haber iniciado con la experiencia que estoy contruyendo desde ahora, también espero haber conocido buenos compañer@s con los que pueda compartir mi tiempo fuera y dentro del trabajo.
 
-## PRESETNACIÓN PC1
+## PRESENTACIÓN PCs
+### Presentación PC1
 Módulo 4: Inquilinos
 Link del video individual: https://www.youtube.com/watch?v=Rs0_Pm492nE
 <p align= center>
   <img alt="Módulo Inquilinos" src="PC1_ImagenVideo.png" style="width=auto; height: 500px; border: 5px solid #ffff">
+<p>
+
+### Presentación PC2
+Link del video individual: https://youtu.be/SXLXpZgMsfM
+<p align= center>
+  <img alt="Módulo Inquilinos" src="PC2_ImagenVideo.png" style="width=auto; height: 500px; border: 5px solid #ffff">
 <p>
