--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -243,27 +243,15 @@ La entidad Empleado representa a una persona que trabaja en una empresa, almacen
 | **Atributo**             | **Naturaleza** | **Formato**     | **Valores Válidos**               | **Unidad** | **Derivada de** | **Descripción**                                            |
 | ------------------------ | -------------- | --------------- | --------------------------------- | ---------- | --------------- | ---------------------------------------------------------- |
 | IdEmpleado               | CHAR(10)       | x(10)           | Único por empleado                | N/A        | N/A             | Identificador único para cada empleado                     |
-| Nombre                   | VARCHAR(100)   | x(100)          | Nombres y Apellidos               | N/A        | N/A             | Nombre completo del empleado                               |
-| Fecha de Nacimiento      | DATE           | YYYY-MM-DD      | AAAA-MM-DD                        | Años       | N/A             | Fecha de nacimiento del empleado                           |
-| Género                   | VARCHAR(10)    | x(10)           | Masculino, Femenino, Otro         | N/A        | N/A             | Identidad de género del empleado                           |
-| Estado Civil             | VARCHAR(15)    | x(15)           | Soltero, Casado, Divorciado, etc. | N/A        | N/A             | Estado civil del empleado                                  |
-| Nacionalidad             | VARCHAR(50)    | x(50)           | TAB1                              | N/A        | N/A             | Nacionalidad del empleado                                  |
-| Número de Identificación | VARCHAR(20)    | x(20)           | Según país (DNI, Pasaporte)       | N/A        | N/A             | Documento de identidad nacional o pasaporte                |
-| Dirección                | VARCHAR(255)   | x(255)          | Dirección válida                  | N/A        | N/A             | Domicilio actual del empleado                              |
+| Nombre | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Nombre del empleado.     |    
+| firstLastName | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Primer apellido del empleado.     |    
+| secondLastName | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Segundo apellido del empleado.     |    
+| Nombre | CHAR (10)      | x(10)       | No nulo       | N/A                   | N/A             | Nombre del empleado.     |    
 | Teléfono                 | VARCHAR(15)    | x(15)           | Número de teléfono válido         | N/A        | N/A             | Número de contacto telefónico                              |
 | Correo Electrónico       | VARCHAR(100)   | x(100)          | Dirección de email válida         | N/A        | N/A             | Correo electrónico personal o laboral                      |
 | Cargo                    | VARCHAR(50)    | x(50)           | Cargo dentro de la empresa        | N/A        | N/A             | Título o posición que ocupa el empleado en la organización |
-| Fotografía               | BLOB           | Archivo binario | Archivo de imagen                 | N/A        | N/A             | Fotografía del empleado para el sistema                    |
+| FechaNac                    | DATE           | YYYY-MM-DD     | Fecha válida                         | Días       | N/A             | Fecha de nacimiento                             |
 
-TAB1
-
-| CODIGO | DESCRIPCIÓN |
-| ------ | ----------- |
-| P1     | Perú        |
-| P2     | España      |
-| P3     | Chile       |
-| P4     | EEUU        |
-| P5     | Venezuela   |
 
 ---
 
