creacion de tablas

--- a/7/7.1/7.1.md
+++ b/7/7.1/7.1.md
@@ -1,3 +1,25 @@
 # 7.1. Creación de Tablas
+Este proceso garantiza que la base de datos esté bien estructurada, con tipos de datos adecuados y relaciones claras entre las tablas, lo que facilita el mantenimiento y las consultas en el futuro.
 
-Sample content for section 7.1.
+## Pasos realizados para la creación de las tablas
+1. Creación de Tablas
+Se hizo uso de la generación automática de ERDPlus; sin embargo, se realizaron modificaciones para atributos que debian tomar valores predeterminaods
+
+2. Definición de los Tipos ENUM
+Se crean los tipos enumerados necesarios utilizados CREATE TYPE, definiedo cada tipo con sus respectivos valores. También se siguio de aplicar la 2FN (Segunda Forma Normal) de los cuales los principales puntos a considerar fue la no dependencia parcial en las columnas no clave.
+
+3. Definición de columnas y restricciones
+Para cada tabla, se especifican los tipos de datos adecuados (como CHAR, VARCHAR, DATE, NUMERIC, etc.) y se establecen restricciones (como NOT NULL, DEFAULT, etc.) para asegurar que los datos sean válidos.
+
+4. Relacioens entre Tablas
+Se implementan relaciones entre tablas a través de claves foráneas, conectando las tablas relevantes (por ejemplo, FOREIGN KEY (id_persona) REFERENCES Persona(id_persona)).
+
+5. Eliminación de Tablas Existentes
+Se utilizan comandos DROP TABLE IF EXISTS para eliminar las tablas que pueden existir previamente.
+
+6. Eliminación de Tipos Personalizados
+Se utilizó comandos DROP TYPE IF EXISTS para eliminar los tipos enumerados que podrían estar en uso, asegurando que se puedan recrear sin conflictos.
+
+
+### Link del scripts realizado para la creacioón de la tablas
+[Query para la creación de tablas](create_tables.sql)
