--- a/7/7.2/7.2.md
+++ b/7/7.2/7.2.md
@@ -1,3 +1,38 @@
 # 7.2. Poblamiento Inicial de Datos
 
-Sample content for section 7.2.
+## Pasos realizados para el poblamiento de daots
+Se simularon registros para la prueba de la bse de datos creada.
+
+1. Insertar Datos en Tablas:
+   - **Contrato_Empleado:** Se insertan 10 registros de contratos.
+   - **Persona:** Se insertan 20 registros, incluyendo inquilinos y empleados.
+   - **Empleado:** Se insertan 10 registros de empleados con referencias a la tabla Persona.
+   - **Recobro:** Se insertan 10 registros de recobros.
+   - **Proyecto_recobro:** Se insertan 10 registros de proyectos de recobro.
+   - **Documento:** Se insertan 10 documentos con diferentes tipos.
+   - **Solicitud:** Se insertan 10 solicitudes con su estado y documentos relacionados.
+   - **Zonas:** Se insertan 10 registros de zonas en el centro comercial.
+   - **Actividad:** Se insertan 10 actividades relacionadas con proyectos.
+   - **Persona_email:** Se insertan 20 correos electrónicos para las personas.
+   - **Persona_telefono:** Se insertan 20 números de teléfono para las personas.
+   - **Prioridad:** Se insertan 4 niveles de prioridad.
+   - **Instalacion:** Se insertan 10 registros de instalaciones en diferentes zonas.
+   - **Espacio_Comercial:** Se insertan 10 registros de espacios comerciales.
+   - **Inquilino:** Se insertan 10 inquilinos con referencias a personas y espacios.
+   - **Espacio_comun:** Se insertan 10 registros de espacios comunes.
+   - **Factura:** Se insertan 10 facturas relacionadas con inquilinos.
+   - **Recordatorio:** Se insertan 10 recordatorios de pago para las facturas.
+   - **Pago:** Se insertan 10 registros de pagos realizados.
+   - **Evento:** Se insertan 10 eventos en espacios comunes.
+   - **Program_Mantenimiento:** Se insertan 10 registros de mantenimiento programado.
+   - **Acuerdo_recobro:** Se insertan 10 acuerdos de recobro.
+   - **Contrato_Alquiler:** Se insertan 10 contratos de alquiler.
+   - **Registro_de_incidencia:** Se insertan 10 registros de incidencias.
+   - **Registro_Mantenimiento:** Se insertan 10 registros de mantenimiento realizado.
+
+
+2. **Restaurar Estado Original:**
+   - Se utiliza `TRUNCATE TABLE` para vaciar todas las tablas.
+
+### Link del scripts realizado para el poblamiento de datos
+[Query para el poblamiento de datos](poblamientos_datos.sql)
