--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -32,4 +32,5 @@
 
   ## PRESETNACIÓN PC1
   Módulo 7: Eventos
-  Link del video individual: https://youtu.be/_imLK59c02Y
+  Link del video individual PC1: https://youtu.be/_imLK59c02Y
+  Link del video individual PC2: https://youtu.be/y5rBlQTK3fg
