--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -95,7 +95,7 @@ Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa pa
 | Precio_acuerdo      | Decimal(5,2)   | x99999.99   | No nulo               | Sol        | N/A             | Cantidad de dinero a cobrar por la ejecucion del proyecto |
 | Descripcion_acuerdo | VARCHAR(40)    | x(40)       | no nulo               | N/A        | N/A             | Detalles sobre el acuerdo                                 |
 
-  ## Entidad Actividades
+  ## Entidad Actividad
 Actividad realizada durante la ejecucion del proyecto
 
 | **Atributo**  | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                |
