--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -221,7 +221,7 @@ La entidad Recordatorio almacena la información de los recordatorios de pago en
 | idRecordatorio    | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
 | Fecha_Envio       | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
 | Tipo_Recordatorio | CHAR(10)       | x(10)       | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
-| contenido         | CHAR           | x(64)       | No nulo               | N/A        | N/A             | Mensaje o detalles específicos que se enviaron en el recordatorio.                   |
+| contenido         | VARCHAR(50)    | x(64)       | No nulo               | N/A        | N/A             | Mensaje o detalles específicos que se enviaron en el recordatorio.                   |
 
 ---
 
