--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -275,9 +275,9 @@ Se encuentran los espacios comunes que se ponen a dispocición para ser utilizad
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad**            | **Derivada de** | **Descripción (Corta)**                                                      |
 | ------------------ | -------------- | ----------- | --------------------- | --------------------- | --------------- | ---------------------------------------------------------------------------- |
 | nombreEspacioComún | CHAR (10)      | x(10)       | No nulo, único        | N/A                   | N/A             | Nombre asignado a cada espacio comun.                                        |
-| Área               | DECIMAL(10,2)  | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                      |
-| Estado             | CHAR (10)      | x(10)       | TAB4                  | N/A                   | N/A             | Estado actual del espacio comercial.                                         |
-| PrecioPorDia       | DECIMAL(10,2)  | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                              |
+| Área               | float          | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                      |
+| Estado             | CHAR (20)      | x(10)       | TAB4                  | N/A                   | N/A             | Estado actual del espacio comercial.                                         |
+| PrecioPorDia       | float          | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                              |
 | MotivoDeUso        | CHAR(50)       | Texto libre | Descripción detallada | N/A                   | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado. |
 
 
