--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -160,6 +160,7 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 
 | **Atributo**  | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**             |
 | ------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ----------------------------------- |
+| cod_instal    | CHAR(10)       | x(10)       | No nulo              | N/A        | N/A             | Código único de intalación          |
 | nombre_instal | CHAR           | x(30)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación |
 | Tipo          | VARCHAR        | x(20)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación       |
 
