--- a/6/6.1/6.1.md
+++ b/6/6.1/6.1.md
@@ -3,4 +3,4 @@
 Este esquema representa el modelo relacional del sistema de Gestión de Espacios de MallPlaza.
 
 
-![modelo](Esquema_Relacional.jpg)
+![modelo](Modelo_relacional_actualizado.jpg)
