--- a/0/0.3_Daryl/0.3.md
+++ b/0/0.3_Daryl/0.3.md
@@ -9,3 +9,8 @@ Nombre y Apellidos: Daryl Renzo Gonzales Camarena
 Correo UNI: daryl.gonzales.c@uni.pr
 
 Correo personal: darylgonzales@outlook.com
+
+  ## PRESETNACIÓN PC1
+  Módulo 6: Recobros
+  Link del video individual PC1: [https://youtu.be/_imLK59c02Y](https://youtu.be/WGuEK1Yn4E8)
+  Link del video individual PC2: 
