--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -69,7 +69,7 @@ Contiene información sobre la Solicitud especifica de un servicio extra que la 
 | **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                       |
 | ------------------ | -------------- | ----------- | -------------------------- | ---------- | --------------- | --------------------------------------------- |
 | Nombre_recobro     | VARCHAR(20)    | x(20)       | No nulo                    | N/A        | N/A             | Nombre del recobro                            |
-| Descripcion_recobro| VARCHAR(50)    | x(50)       | No nulo                    | N/A        | N/A             | Detalles del recobro a realizar               |
+| Descripcion_recobro| VARCHAR(99)    | x(99)       | No nulo                    | N/A        | N/A             | Detalles del recobro a realizar               |
 | id_recobro         | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el recobro            |
 | Razon_recobro      | VARCHAR(30)    | x(30)       | no nulo                    | N/A        | N/A             | Motivo por el cual se realiza el recobro      |
 | Categoria_recobro  | VARCHAR(20)    | x(20)       | no nulo                    | N/A        | N/A             | Clasificacion en la cual entra el recobro     |
@@ -93,17 +93,17 @@ Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa pa
 | ID_acuerdo          | CHAR(10)       | x(10)       | No nulo, único             | N/A        | N/A             | Codigo para identificar el acuerdo del recobro             |
 | Fecha_acuerdo       | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | dias       | N/A             | Fecha en la que se realiza el acuerdo                      |
 | Precio_acuerdo      | Decimal(5,2)   | x99999.99   | No nulo                    | Sol        | N/A             | Cantidad de dinero a cobrar por la ejecucion del proyecto  |
-| Descripcion_acuerdo | VARCHAR(40)    | x(40)       | no nulo                    | N/A        | N/A             | Detalles sobre el acuerdo                                  |
+| Descripcion_acuerdo | VARCHAR(500)   | x(500)      | no nulo                    | N/A        | N/A             | Detalles sobre el acuerdo                                  |
 
   ## Entidad Actividades
 Actividad realizada durante la ejecucion del proyecto
 
 | **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos**        | **Unidad** | **Derivada de** | **Descripción (Corta)**                                    |
 | ------------------- | -------------- | ----------- | -------------------------- | ---------- | --------------- | -----------------------------------------------------------|
-| cod_actividad       | CHAR(30)       | x(10)       | no nulo, único             | N/A        | N/A             | Codigo para identificar a la actividad                     |
+| cod_actividad       | CHAR(10)       | x(10)       | no nulo, único             | N/A        | N/A             | Codigo para identificar a la actividad                     |
 | descripcion         | VARCHAR(30)    | x(30)       | No nulo                    | N/A        | N/A             | Descripcion de la actividad                                |
 | Fecha_inicio        | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que inicia la actividad                        |
-| Fecha_fin           | CHAR(10)       | x(10)       | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza la actividad                      |
+| Fecha_fin           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha en la que finaliza la actividad                      |
 
 
   ## Entidad Programación Mantenimientos
@@ -114,9 +114,9 @@ Representa la programación de mantenimientos, tanto preventivo como correctivo.
 | cod_Mantenimiento | CHAR(10)     | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
 | prioridad       | CHAR(2)        | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
 | plazo           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
-| Descripción     | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
-| encargado       | VARCHAR           | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
-|Estado           | VARCHAR           | x(30)       | (Pendiente, Hecho)     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
+| Descripción     | VARCHAR        | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
+| encargado       | VARCHAR        | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
+|Estado           | VARCHAR        | x(30)       | (Pendiente, Hecho)     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
 
 
 TAB1
