--- a/0/0.3_Daryl/0.3.md
+++ b/0/0.3_Daryl/0.3.md
@@ -10,7 +10,7 @@ Correo UNI: daryl.gonzales.c@uni.pr
 
 Correo personal: darylgonzales@outlook.com
 
-  ## PRESETNACIÓN PC1
+  ## VIDEOS DE EXPOSICION INDIVIDUAL
   Módulo 6: Recobros
   Link del video individual PC1: [https://youtu.be/_imLK59c02Y](https://youtu.be/WGuEK1Yn4E8)
-  Link del video individual PC2: 
+  Link del video individual PC2: https://youtu.be/J23-sidQ3Z0
