--- a/4/4.md
+++ b/4/4.md
@@ -139,7 +139,7 @@
             <td rowspan=3><a href="4.7/4.7.md">Eventos</td>
             <td>1</td>
             <td>Definir un espacio común cómo disponible para eventos o módulos.</td>
-            <td>R0023</td>
+            <td>R023</td>
         </tr>
         </tr>
             <td>2</td>
@@ -158,15 +158,20 @@
             <td>Definir y programar actividades de mantenimiento en cada instalación</td>
             <td>R026</td>
         </tr>
-        </tr>
+        <tr>
             <td>2</td>
-            <td>Registrar todas las actividades de mantenimiento realizadas en cada instalación</td>
+            <td>Rastrear todos los mantenimiento programados</td>
             <td>R027</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>Registrar incidencia para mantenimiento correctivo</td>
+            <td>Registrar todas las actividades de mantenimiento realizadas en cada instalación</td>
             <td>R028</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Registrar incidencia para mantenimiento correctivo</td>
+            <td>R029</td>
         </tr>
     </tbody>
 </table>
