--- a/4/4.md
+++ b/4/4.md
@@ -120,6 +120,7 @@
             <td>Visualizacion de recobros</td>
             <td>R019</td>
         </tr>
+        <tr>
             <td>2</td>
             <td>Envío de solicitud de recobros</td>
             <td>R020</td>
@@ -141,7 +142,7 @@
             <td>Definir un espacio común cómo disponible para eventos o módulos.</td>
             <td>R023</td>
         </tr>
-        </tr>
+        <tr>
             <td>2</td>
             <td>Enviar solicitud para usar una zona.</td>
             <td>R024</td>
@@ -152,8 +153,8 @@
             <td>R025</td>
         </tr>
         <tr>
-            <td rowspan=3>8</td>
-            <td rowspan=3><a href="4.8/4.8.md">Mantenimiento y Servicio</td>
+            <td rowspan=4>8</td>
+            <td rowspan=4><a href="4.8/4.8.md">Gestión de mantenimientos programados</td>
             <td>1</td>
             <td>Definir y programar actividades de mantenimiento en cada instalación</td>
             <td>R026</td>
