--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -5,11 +5,12 @@ Descripción:
 
 Este módulo permite planificar y ejecutar tareas de mantenimiento en las instalaciones del centro comercial.
 
-| Requerimiento        |  Descripción                                                             |
-|-----------------------|--------------------------------------------------------------------------|
-|        R1            | Definir y programar actividades de mantenimiento en cada instalación |
-|R2 |Registrar todas las actividades de mantenimiento realizadas en cada instalación|
-|R3 |Registrar incidencia para mantenimiento correctivo |
+| Requerimiento        |  Descripción                                                              |
+|----------------------|---------------------------------------------------------------------------|
+|R1|Definir y programar actividades de mantenimiento en cada instalación                          |
+|R2|Rastrear todos los mantenimientos programados                                                 |
+|R3|Registrar todas las actividades de mantenimiento realizadas en cada instalación                |
+|R4|Registrar incidencia para mantenimiento correctivo                                             |
 
 ## Especificaciones de requerimientos
 ### R1 ( Requerimiento 1)
@@ -18,7 +19,7 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 |---------|---------------------------------------------------------------------------------|
 | Descripción| Esto permite al usuario planificar y programar actividades de mantenimiento para las infraestructuras y equipos en cada instalación|                                                                               
 |Actor    | Administrador de Mantenimiento|
-| Precondiciones |Deben estar registrados los equipos, instalaciones y ubicaciones donde se realizarán los mantenimientos|
+| Precondiciones |Deben estar registrados las instalaciones, empleados y ubicaciones donde se realizarán los mantenimientos|
 | Postcondiciones | Se actualiza el calendario de mantenimientos en la interfaz del sistema|
 
   Flujo de eventos:
@@ -35,11 +36,26 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 |Nro |  Acción del actor |    Respuesta del sistema   |
 |----|------------------|------------------------------|
 | 2 | El Administrador selecciona la opción de Programar mantenimiento|El sistema le pide los detalles del mantenimiento|
-| 3 | El Aministrador selecciona la instalación, el encargado, Descripción, Prioridad, Fecha y confirma la programación de mantenimiento|El sistema le pide una confirmación|
+| 3 | El Aministrador selecciona la instalación, el encargado, Descripción, Prioridad, el plazo y confirma la programación de mantenimiento|El sistema le pide una confirmación|
 | 4 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado | 
 
-
 ### R2 (Requerimiento 2)
+
+| Nombre |Rastrear todos los mantenimientos programados    |
+|---------|---------------------------------------------------------------------------------|
+| Descripción| Esto permite al usuario poder visualizar todas las programaciónes de mantenimiento programados y utilizar filtros para dar un seguimiento y detalle del cierto mantenimiento|
+
+|Actor    | Administrador de Mantenimiento|
+| Precondiciones |Deben estar registrados instalaciones y ubicaciones donde se realizarán los mantenimientos|
+
+  Flujo de eventos:
+|Nro |  Acción del actor |    Respuesta del sistema   |
+|----|------------------|------------------------------|
+| 2 | El Administrador selecciona la opción de Programaciones realizadas|El sistema le pide una pantalla de todas las programaciones realizadas|
+| 3 | El Aministrador selecciona el boton "ordenar por" y elige la opción de mantenimientos con estado "hechos"|El sistema le muestra todas las programaciones realizadas que ya se han realizado|
+| 4 |  El Administrador selecciona un codigo de mantenimiento específico| El sistema le muestra una pantalla de la especificación del mantenimiento hecho| 
+
+### R3 (Requerimiento 3)
 
 | Nombre | Registrar Actividades de Mantenimiento |
 |---------|---------------------------------------------------------------------------------|
@@ -56,7 +72,7 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 | 2 | El supervisor selecciona un mantenimiento en específico |El sistema le muestra una pantalla pidiendo detalles del mantenimiento|
 | 3 | El supervisor ingresa los detalles de la actividad: Fecha y hora real de inicio y fin, Observaciones adicionales y confirma los datos y registra la actividad| El sistema almacena la información y muestra una confirmación de que la actividad ha sido registrada exitosamente|
 
-### R3 ( Requerimiento 3)
+### R4 ( Requerimiento 4)
 | Nombre |Registrar Incidencia para Mantenimiento Correctivo |
 |---------|---------------------------------------------------------------------------------|
 | Descripción| Permite a los usuarios reportar una incidencia que requiera mantenimiento correctivo|
