--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -1,3 +1,58 @@
 # 8.1. Sentencias SQL por módulo / prototipo
 
-Sample content for section 8.1.
+
+| Codigo Requerimiento  |R - 012| 
+|-----------------------|-------|
+| Codigo Interfaz       |I - 019| 
+| Imagen interfaz       |![image](I019.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página de Inquilinos:** Se llenará la tabla mostrada de los inquilinos vigentes en MallPlaza
+```
+SELECT i.id_inquilino,
+		p.nombre as "Nombre",
+		i.razon_social as "Razón Social",
+		p.nro_documento as "RUC",
+		c.nombre_zona as "Espacio Comercial",
+		t.telefono as "Teléfono",
+		e.email as "Email",
+		i.estado_inquilino as "Estado Inquilino"
+FROM inquilino i
+JOIN persona p
+	ON i.id_persona = p.id_persona
+JOIN persona_email e
+	ON p.id_persona = e.id_persona
+JOIN persona_telefono t
+	ON p.id_persona = t.id_persona
+JOIN espacio_comercial c
+	ON i.id_espacio_comercial = c.id_espacio_comercial;
+```
+
+* **Búsqueda de Inquilino:** Se llenará la barra de búsqueda para realizar la búsqueda según el atributo seleccionado en el filtro.
+```
+SELECT i.id_inquilino,
+		p.nombre as "Nombre",
+		i.razon_social as "Razón Social",
+		p.nro_documento as "RUC",
+		c.nombre_zona as "Espacio Comercial",
+		t.telefono as "Teléfono",
+		e.email as "Email",
+		i.estado_inquilino as "Estado Inquilino"
+FROM inquilino i
+JOIN persona p
+	ON i.id_persona = p.id_persona
+JOIN persona_email e
+	ON p.id_persona = e.id_persona
+JOIN persona_telefono t
+	ON p.id_persona = t.id_persona
+JOIN espacio_comercial c
+	ON i.id_espacio_comercial = c.id_espacio_comercial
+WHERE 	id_inquilino = <1> OR
+		p.nombre = <1> OR
+		i.razon_social = <1> OR
+		p.nro_documento = <1>;
+```
+
+*Donde el valor ingresado en <1> se captura y se realiza la búsqueda según la opción que se seleccionó en <2>*
+
