--- a/8/8.md
+++ b/8/8.md
@@ -1,3 +1,10 @@
+<h3>Navegación:<br>
+
+[🔙](../7/7.md) 7. Creación de Tablas y Poblamiento de Datos | [📜](../README.md) ÍNDICE
+
 # 8. Preparación para Implementación
 
-Sample content for section 8.
+## CONTENIDO
+- 8.1. [Sentencias SQL por módulo / prototipo](8.1/8.1.md)
+- 8.2. [Alcance del Piloto (Funcionalidad primaria por módulo)](8.2/8.2.md)
+- 8.3. [Stack Tecnológico Elegido](8.3/8.3.md)
