--- a/7/7.md
+++ b/7/7.md
@@ -1,6 +1,6 @@
 <h3>Navegación:<br>
 
-[🔙](../6/6.md) 6. Modelo Relacional | [📜](../README.md) ÍNDICE
+[🔙](../6/6.md) 6. Modelo Relacional | [📜](../README.md) ÍNDICE | [👉🏼](../8/8.md) 8. Preparación para Implementación
 # 7. Creación de Tablas y Poblamiento de Datos
 
 ## CONTENIDO
