--- a/4/4.6/4.6.md
+++ b/4/4.6/4.6.md
@@ -7,7 +7,7 @@
 | R001 | Visualizacion de recobros|
 | R002 | Envío de solicitud de recobros | 
 | R003 | Planificacion del proyecto de recobro |
-| R004 | Supervision del proyecto |
+| R004 | Gestionar acuerdos |
 
 
 ---
@@ -70,3 +70,29 @@
 | 4 | El administrador ajusta el estado de las actividades según la situacion real de las actividades. |
 | 5 | El sistema habilita la opcion de registrar el pago por el recobro cuando todas las actividades estan completadas. |
 | 6 | Fin del caso de uso. |
+
+
+## **Caso de Uso #4: Gestionar acuerdo**
+| Código | R004 |
+|---|---|
+| **Objetivo** | Permitir el registro y revisión de acuerdos. |
+| **Descripción** | El administrador puede crear un nuevo acuerdo del recobro definido previamente con el inquilino, así como filtrar y revisar acuerdos existentes. |
+| **Actor** | Administrador |
+| **Flujo de eventos** |
+| 1 | El usuario accede al sistema en la sección de recobros. |
+| 2 | El usuario elige entre crear un nuevo recobro o revisar recobros existentes. |
+| **Crear nuevo contrato** |  |
+| 3 | Si elige "Crear nuevo contrato", el sistema muestra un formulario para ingresar los datos del nuevo contrato: inquilino, local, fecha de inicio, fecha de fin, monto de renta, forma de pago y otras condiciones. |
+| 4 | El usuario completa el formulario con la información requerida. |
+| 5 | El sistema valida que el inquilino y el local existan en el sistema y que no haya conflictos de fechas con otros contratos. |
+| 6 | El sistema registra el nuevo contrato en la base de datos. |
+| **Revisar contratos** |  |
+| 7 | Si elige revisar contratos, el sistema muestra una lista del total de contratos. |
+| 8 | El sistema presenta un formulario para filtrar los resultados por: |
+|   | - Estado del contrato (activo, vencido, etc.) |
+|   | - Tipo de local (tienda, módulo) |
+|   | - Rango de fechas (inicio, fin) |
+| 9 | El usuario aplica los filtros y envía la solicitud. |
+| 10 | El sistema consulta la base de datos y obtiene el número total de contratos que cumplen con los criterios de búsqueda. |
+| 11 | El sistema muestra el resultado en pantalla, presentando el número total de contratos encontrados. |
+| 12 | Fin del caso de uso. |
