--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -205,12 +205,12 @@ La entidad Factura representa los documentos emitidos por el sistema para cobrar
 
 | **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**                       |
 | ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
-| idFactura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
-| Fecha_Emisión     | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se emitió la factura. |
-| Monto_Total       | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0          | Moneda     | N/A             | Monto total a pagar por la factura.   |
-| Estado            | CHAR(10)       | x(10)       | "Pendiente", "Pagado" | N/A        | N/A             | Estado actual de la factura.          |
-| Fecha_Vencimiento | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha límite para pagar la factura.   |
-| idInquilino       | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del inquilino.    |
+| id_factura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
+| fecha_emision     | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se emitió la factura. |
+| monto_Total       | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0          | Moneda     | N/A             | Monto total a pagar por la factura.   |
+| estado_factura            | CHAR(10)       | x(10)       | "Pendiente", "Pagado" | N/A        | N/A             | Estado actual de la factura.          |
+| fecha_vencimiento | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha límite para pagar la factura.   |
+| id_inquilino       | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del inquilino.    |
 
 ---
 
