--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -219,10 +219,11 @@ La entidad Recordatorio almacena la información de los recordatorios de pago en
 
 | **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción**                                                                      |
 | ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------------------------------------------------------ |
-| idRecordatorio    | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
-| Fecha_Envio       | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
-| Tipo_Recordatorio | CHAR(10)       | x(10)       | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
+| id_recordatorio    | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del recordatorio.                                                |
+| fecha_envio       | DATE           | dd/mm/aaaa  | No nulo               | N/A        | N/A             | Fecha en la que se envió el recordatorio.                                            |
+| tipo_recordatorio | CHAR(10)       | x(10)       | "Previo", "Posterior" | N/A        | N/A             | Indica si el recordatorio fue enviado antes o después del vencimiento de la factura. |
 | contenido         | VARCHAR(50)    | x(64)       | No nulo               | N/A        | N/A             | Mensaje o detalles específicos que se enviaron en el recordatorio.                   |
+| id_factura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
 
 ---
 
@@ -231,11 +232,12 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 
 | **Atributo** | **Naturaleza** | **Formato** | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción (Corta)**                 |
 | ------------ | -------------- | ----------- | ------------------------- | ---------- | --------------- | --------------------------------------- |
-| idPago       | CHAR(10)       | x(10)       | No nulo, único            | N/A        | N/A             | Identificador único del pago.           |
-| Fecha_Pago   | DATE           | dd/mm/aaaa  | No nulo                   | N/A        | N/A             | Fecha en la que se realizó el pago.     |
-| Monto_Pago   | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0              | Moneda     | N/A             | Monto pagado en esta transacción.       |
-| Método_Pago  | CHAR(20)       | x(20)       | "Manual", "Automático"    | N/A        | N/A             | Método utilizado para realizar el pago. |
-| tipoMoneda   | CHAR(3)        | x(3)        | "USD", "EUR", "PEN", etc. | N/A        | N/A             | Moneda en la que se realizó el pago.    |
+| id_pago       | CHAR(10)       | x(10)       | No nulo, único            | N/A        | N/A             | Identificador único del pago.           |
+| fecha_pago   | DATE           | dd/mm/aaaa  | No nulo                   | N/A        | N/A             | Fecha en la que se realizó el pago.     |
+| monto_pago   | DECIMAL(10,2)  | 9999999.99  | No nulo, > 0              | Moneda     | N/A             | Monto pagado en esta transacción.       |
+| metodo_pago  | CHAR(20)       | x(20)       | "Manual", "Automático"    | N/A        | N/A             | Método utilizado para realizar el pago. |
+| tipo_moneda   | CHAR(3)        | x(3)        | "USD", "EUR", "PEN", etc. | N/A        | N/A             | Moneda en la que se realizó el pago.    |
+| id_factura         | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único de la factura.    |
 ---
 
 ## **Entidad Empleado**  
